terraform-aws-module-project/app-infra-module/ec2.tf
#key pair for login

resource "aws_key_pair" "my_key" {
  key_name   = "${var.env}-infra-app-key"
  public_key = file("terra-key-ec2.pub")

  tags = {
    Environment = var.env
  }
}

# VPC & S.G.
resource "aws_default_vpc" "default" {
  tags = {
    Name = "Default VPC"
  }
}

resource "aws_security_group" "my_security_group" {
  name        = "${var.env}-infra-app-sg"
  description = "this is terraform generated S.G for infra app"
  vpc_id      = aws_default_vpc.default.id # interpolation

  #inbound rules
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH Open"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP Open"
  }

  #outbound rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "All outbound access open"
  }

  tags = {
    Name = "${var.env}-infra-app-sg"
  }
}

# ec2 instance

resource "aws_instance" "my_instance" {
#   for_each = tomap({
#     terraform-micro  = "t2.micro"
#     terraform-micro-two = "t2.micro"
#     # terraform-micro-three = "t2.micro"
#   }) # meta argument
  count = var.instance_count    # meta argument

  depends_on = [aws_security_group.my_security_group, aws_key_pair.my_key]

  key_name        = aws_key_pair.my_key.key_name
  security_groups = [aws_security_group.my_security_group.name]
  instance_type   = var.instance_type
  ami             = var.ec2_ami_id # Ubuntu
#   user_data       = file("install_nginx.sh")

  root_block_device {
    volume_size = var.env == "prod" ? 10 : 8
    volume_type = "gp3"
  }
  tags = {
    Name = "${var.env}-infra-app-instance"
    Environment = var.env
  }
}
